fixed screen overflow issues

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -14,6 +14,8 @@
 
   body {
     font-family: "Plus Jakarta Sans", sans-serif;
+    height: 100vh;
+    overflow: hidden;
     font-weight: 400;
     line-height: 1;
     overflow-x: hidden;
@@ -33,7 +35,7 @@
 }
 
 .sidebar-h {
-  min-height: calc(100vh - 100px);
+  height: calc(100vh - 99px);
 }
 
 .shadow-ut {
@@ -51,6 +53,18 @@
   background: #20212c;
 }
 .scrollbar::-webkit-scrollbar-thumb {
+  background-color: #3e3f4e;
+  border: 3px solid #20212c;
+  border-radius: 10px;
+}
+
+.scrollbar-big::-webkit-scrollbar {
+  width: 15px;
+}
+.scrollbar-big::-webkit-scrollbar-track {
+  background: #20212c;
+}
+.scrollbar-big::-webkit-scrollbar-thumb {
   background-color: #3e3f4e;
   border: 3px solid #20212c;
   border-radius: 10px;
